--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -16,11 +16,11 @@
 
             <div class="search">
                 <input type="text" placeholder="enter city name" spellcheck="false">
-                <button><img src="./images/search.png" alt=""></button>
+                <button><img src="images/search.png" alt=""></button>
             </div>
 
             <div class="weather">
-                <img src="images/rain.png" alt="" class="weather-icon">
+                <img src="images/clear.png" alt="" class="weather-icon">
                 <h1 class="temp">22°c</h1>
                 <h2 class="city">New York</h2>
                 <div class="details">
@@ -47,16 +47,40 @@
         <script>
 
             const apiKey = "6b4b28dd5f7dfdb5dd77a4b9515ea829";
-            const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=london";
+            const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=";
 
-            async function checkWeather(){
-                const response = await fetch(apiUrl + `&appid=${apiKey}`);
+            const searchbox = document.querySelector(".search input");
+            const searchBtn = document.querySelector(".search button");
+            const weatherIcon = document.querySelector(".weather-icon");
+
+            async function checkWeather(city){
+                const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
                 var data = await response.json();
                 console.log(data);
-            }
-            checkWeather();
 
-            
+                 document.querySelector(".city").innerHTML = data.name;
+                 document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+                 document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+                 document.querySelector(".wind").innerHTML = data.wind.speed +"km/h";
+
+
+                  if(data.weather[0].main == "Clouds"){
+                    weatherIcon.src = "images/clouds.png";
+                  }else if(data.weather[0].main == "Clear"){
+                    weatherIcon.src = "images/clear.png";
+                  }else if(data.weather[0].main == "Rain"){
+                    weatherIcon.src = "images/rain.png";
+                  }else if(data.weather[0].main == "Drizzle"){
+                    weatherIcon.src = "images/drrizle.png";
+                  }else if(data.weather[0].main == "Mist"){
+                    weatherIcon.src = "images/mist.png";
+                  }
+
+            }
+
+            searchBtn.addEventListener("click", () => {
+                checkWeather(searchbox.value);
+            });
 
         </script>
 
