--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do list</title>
     <link rel="stylesheet" href="style-to-do.css">
+    
 </head>
 
 <body>
@@ -15,17 +16,19 @@
             <h2>To-Do List <img src="images/icon.png" alt=""></h2>
             <div class="row">
                 <input type="text" name="" id="input-box" placeholder="Add your text">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div> 
 
             <ul id="list-container">
-                <li class="checked">Task 1</li>
+                <!-- <li class="checked">Task 1</li>
                 <li>Task 2</li>
-                <li>Task 3</li>
+                <li>Task 3</li> -->
             </ul>
         </div>
 
     </div>
+
+    <script src="script.js"></script>
     
 </body>
 
