--- a/quiz -app/indext.html
+++ b/quiz -app/indext.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quiz app</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="quiz-style.css">
 </head>
 
 
 
 <body>
 
-
-
+    <div class="app">
+        <h1>Simple quiz</h1>
+        <div class="quiz">
+            <h2 id="question">question goes here</h2>
+            <div id="answer-buttons">
+                <button class="btn">Answre 1</button>
+                <button class="btn">Answre 1</button>
+                <button class="btn">Answre 1</button>
+                <button class="btn">Answre 1</button>
+            </div>
+            <button id="next-btn">Next</button>
+        </div>
+    </div>
 
     <script src="quiz.js"></script>
     
