--- a/Age/index.html
+++ b/Age/index.html
@@ -14,10 +14,13 @@
             <h1>JavaScript <br/><span>Age Calculator</span></h1>
             <div class="input-box">
                 <input type="date" id="date">
-                <button>Calculator</button>
+                <button onclic="calculateAge()">Calculator</button>
             </div>
         </div>
     </div>
+
+
+    <script src="main.js"></script>
     
 </body>
 </html>
