--- a/Age/index.html
+++ b/Age/index.html
@@ -14,8 +14,9 @@
             <h1>JavaScript <br/><span>Age Calculator</span></h1>
             <div class="input-box">
                 <input type="date" id="date">
-                <button onclic="calculateAge()">Calculator</button>
+                <button onclick="calculateAge()">Calculator</button>
             </div>
+            <p id="result"></p>
         </div>
     </div>
 
